--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "tsrpc": "^1.0.1"
   },
   "devDependencies": {
+    "onchange": "^4.1.0",
     "ts-node": "^6.0.1",
     "typescript": "^2.8.3"
   }
