--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ts-loader": "^4.2.0",
-    "tsrpc-browser": "^1.0.1",
-    "tsrpc-protocol-loader": "^0.2.3",
-    "typescript": "^2.8.3",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.15",
-    "webpack-dev-server": "^3.1.3"
+    "fullts": "^1.1.0"
+  },
+  "devDependencies": {
+    "css-loader": "^1.0.0",
+    "file-loader": "^2.0.0",
+    "img-loader": "^3.0.0",
+    "style-loader": "^0.23.0",
+    "url-loader": "^1.1.1",
+    "ts-loader": "*",
+    "tsrpc-protocol-loader": "*",
+    "typescript": "*",
+    "webpack": "*",
+    "webpack-cli": "*",
+    "webpack-dev-server": "*"
   }
 }
